--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <p>深绿色的天花板，带着隐秘的常青藤的花纹。是的，从看到这幅景象的第一秒，艾玛·伍兹就知道，她又回来了，阴森可怕又臭名昭著的欧利蒂丝庄园。</p>
     <p align="center" ><img src="http://5b0988e595225.cdn.sohucs.com/images/20180424/854516e51c164de08d4679fed3f95bb2.png"></p>
     <p>老实说，艾玛醒来后的第一反应不是惊恐，不是慌乱和迷茫，而是深深的沮丧——在游戏中医生小姐一脸严肃地告诫自己不要拆椅子带慢节奏，律师再三强调要紧跟他破解密码不要乱跑，虽然慈善家热情地邀请她在逃出去后到自己创办的孤儿院工作，但艾玛仍然能从他的态度中看到无奈和对自己深深的担忧。“……难道大家都觉得我很多余吗？我是不是很没用啊……”艾玛这样想着。她年幼丧父，在孤独当中尽量学着保持乐观积极的态度，当她看到这些人的命运同自己联系在一起时，她就忍不住去强烈地表达自己的好意。她太渴望朋友了。她不希望自己的朋友坐上狂欢之椅被淘汰出局。然而结果就是，只有她自己被送上了狂欢之椅。没有人来救她。</p> 
-    <p align="center"><img src="../2/3/1.png"></p>
+    <p align="center"><img src="/1.png"></p>
     <p>毕竟她没有律师的谨慎和慈善家的狡猾，又不会像医生小姐那样救治队友，她所有的，就只有单纯和善良。可这两样，偏偏是这场游戏中最不需要的东西。艾玛走到窗边，阴郁的天气让花园中的植物都变得暗淡无光了。天气好一点的时候庄园里时常会有婉转的鸟鸣，甚至还能在灌木丛中发现一两只松鼠。但是现在什么都没有，一切都变得死气沉沉。是的，雨季就要到了，未来的一段时间恐怕都不会有新的挑战者来参加这场可怕的游戏。人数不够的话，她恐怕也不得不在这座庄园多呆一段时间。</p>
     <p align="center"><img src="/2.png"></p>
     <p>但即便是这样，也不可能让我们的园丁小姐感到无聊。她的梦想中并不仅仅只有金钱，事实上，她想成为一名出色的园艺师，将每一座花园都装点得整齐又富有艺术性，而不是仅仅做一名小小的花园工匠。“如果自己不得不留在这里的话，还不如做一些有趣的事情来让自己快乐起来。”艾玛这样想着，便提起床头柜上的工具箱匆匆下了楼。艾玛来到花园中和一排灌木前，神秘的庄园主有钱举办这种危险又荒唐的游戏，却不愿意关注一下自己庄园中的花草。这些灌木在肆意生长后早已变得杂乱不堪。作为一名园丁，不，是未来的一名园艺师，艾玛觉得自己有必要来好好整理一番这些灌木。至少……可以练练手。</p>
-    <p align="center"><img src="../3.png"></p>
+    <p align="center"><img src="/3.png"></p>
     <p>艾玛当然不知道，就在她乐此不疲地翻着工具箱修剪灌木的时候，有人就站在二楼图书馆的窗边，透过窗帘缝隙，默默地注视着她。</p>
     </p>
     <p><a href="https://tieba.baidu.com/p/5651482052?pn=2">杰园cp</a></p>
