--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html> 
   <!--头部开始--> 
   <head> 
-    <title>第五人格cp小故事</title> 
+    <title>第五人格cp小故事</title>
+    <link rel="apple-touch-icon" href="d.jpg">
+    <meta name="apple-mobile-web-app-title" content="第五人格cp小故事">
   </head> 
   <!--头部结束--> 
   <!--主体开始--> 
