--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head> 
     <title>第五人格cp小故事</title>
     <link rel="apple-touch-icon" href="d.jpg">
-    <meta name="apple-mobile-web-app-title" content="第五人格cp小故事">
+    <meta name="apple-mobile-web-app-title" content="Fifth personality">
   </head> 
   <!--头部结束--> 
   <!--主体开始--> 
