--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <!--头部开始--> 
   <head> 
     <title>第五人格cp小故事</title>
-    <link rel="apple-touch-icon" href="http：//georgiechen.github.io/d.jpg">
+    <link rel="apple-touch-icon" href="https：//georgiechen.github.io/d.jpg">
     <meta name="apple-mobile-web-app-title" content="Fifth personality">
   </head> 
   <!--头部结束--> 
