--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <a href="tel:13790019668">13790019668</a>
     <a href="mailto:hzzzoo@126.com">hzzzoo@126.com</a>
   <p><a href="https://j.map.baidu.com/jVneO"></p>
-  <p><img src="  
+  <p><img src="/ditu.png></p>  
 <table border="4" align="center"> 
   <tr> 
     <th></th>
