--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <p><a href="http://www.sohu.com/a/229290200_100047892" target="_blank">口是心非的小园丁</a></p>
     <a href="tel:13790019668">13790019668</a>
     <a href="mailto:hzzzoo@126.com">hzzzoo@126.com</a>
-   
+    <a href="https://j.map.baidu.com/jVneO" target="_blank"><img src="/ditu.png"></a>
 <table border="4" align="center"> 
   <tr> 
     <th></th>
