--- a/web-read-skill/index.html
+++ b/web-read-skill/index.html
@@ -89,5 +89,6 @@
     <script src="/assets/popper.min.js"></script>
     <script src="/assets/bootstrap.min.js"></script>
     <script src="/assets/back-to-top.min.js"></script>
+    <p><i class="fa fa-phone" aria-hidden="true"></i><i class="fa fa-address-card-o" aria-hidden="true"></i></p>
   </body>
 </html>
