--- a/web-read-skill/index.html
+++ b/web-read-skill/index.html
@@ -57,7 +57,8 @@
 <p><b>⑦展示个人观点</b></p>
 <p>往往一篇文章最吸引用户的是作者的独特观点和评论，尽量把自己的个人观点放在文章摘要或者文章的开头部分，不要在你的观点放在文章的最后。</p>
 <p>如果能根据实际情况，综合灵活使用上面所介绍的7大技巧，不仅能提高文章的阅读性，同时也能增加对用户的友好度，更有利于网站的SEO和<a target="_blank" href="https://georgiechen.github.io">用户体验优化</a>。</p>
-        <p><i class="fa fa-phone" aria-hidden="true"></i><i class="fa fa-address-card-o" aria-hidden="true"></i></p>
+        <a class="btn btn-lg btn-success"><i class="fa fa-phone" aria-hidden="true"></i> </a>
+        <a class="btn btn-lg btn-success"><i class="fa fa-address-card-o" aria-hidden="true"></i> </a>
       </div>
     </div>
   </div>
