--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>第五人格cp小故事</title>
-    <meta name="keywords" content="顺德SEO,顺德网站建设,顺德网站推广,顺德网络营销">
-    <meta name="description" content="Select Web是分享顺德SEO、网站建设、网站推广和网络营销的博客，为企业提供专业的SEO、网站建设、网站推广和网络营销顾问服务。">
+    <title>第五人格cp小故事庄园-16电商2</title>
+    <meta name="keywords" content="16电商2">
+    <meta name="description" content="第五人格cp庄园是专门撰写和分享杰园、杰医、杰佣等gl、bl、bg小故事的博客">
     <link rel="canonical" href="https://zackwong.github.io/">
     <meta name="applicable-device" content="pc,mobile">
     <link rel="apple-touch-icon" href="https://zackwong.github.io/images/selectweb-icon.jpg">
