--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="/assets/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"><!--不需要偷此css，保留此代码即可-->
     <link href="/assets/ada.css" rel="stylesheet">
+    <meta name="robot" content="noarchive">
   </head>
   <body>
     <div id="header">
