--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>第五人格cp小故事庄园-16电商2</title>
     <meta name="keywords" content="16电商2">
     <meta name="description" content="第五人格cp庄园是专门撰写和分享杰园、杰医、杰佣等gl、bl、bg小故事的博客">
-    <link rel="canonical" href="https://zackwong.github.io/">
+    <link rel="canonical" href="https://georgiechen.github.io/">
     <meta name="applicable-device" content="pc,mobile">
-    <link rel="apple-touch-icon" href="https://zackwong.github.io/images/selectweb-icon.jpg">
+    <link rel="apple-touch-icon" href="https://georgiechen.github.io/images/title.png">
     <meta name="apple-mobile-web-app-title" content="Select Web">
     <link href="/assets/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"><!--不需要偷此css，保留此代码即可-->
@@ -26,7 +26,7 @@ var _hmt = _hmt || [];
   </head>
   <body>
     <div id="header">
-      <div class="top"><a href="https://georgiechen.github.io"><img alt="Select Web Logo" src="/images/selectweb-logo.png"></a></div>
+      <div class="top"><a href="https://georgiechen.github.io"><img alt="Select Web Logo" src="/images/shouye.png"></a></div>
       <nav class="navbar navbar-expand-lg navbar-light navbar-ada">
         <a class="navbar-brand" href="#"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample08" aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">
