--- a/about/index.html
+++ b/about/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>简介-georgiechen</title>
-    <meta name="keywords" content="Zack">
+    <meta name="keywords" content="Georgie">
     <meta name="description" content="georgiechen,平台管理人，负责第五人格cp撰写、分享和收录，其中包括杰园、杰医、杰佣等各种bg、gl、bl小故事，只要有人吃的cp这里都会有。">
     <link rel="canonical" href="https://georgiechen.github.io/about/">
     <meta name="applicable-device" content="pc,mobile">
