--- a/about/index.html
+++ b/about/index.html
@@ -53,6 +53,7 @@ var _hmt = _hmt || [];
             <p>如果有想要加入的人员，可以去后台进行投稿，欢迎随时联系我们。</p>
             <p>tel：13659878789</p>
             <p>e-mail：265489526@sina.com</p>
+            <p align="center"><a href="https://j.map.baidu.com/NVwwO" target="_blank"><img src="/images/map.jpg" alt="8HTML百度地图"></a></p>
           </div>
           <div class="col-md-12 my-4"><hr></div>
           <div class="col-md-12">
