--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@ var _hmt = _hmt || [];
           <ul class="navbar-nav">
             <li class="nav-item"><a class="nav-link" href="https://georgiechen.github.io">首页</a></li>
             <li class="nav-item"><a class="nav-link" href="https://georgiechen.github.io/about/">关于我</a></li>
+            <div class="dropdown-menu" aria-labelledby="georgiechen">
+                <a class="dropdown-item" href="https://georgiechen.github.io/">园丁</a>
+                <a class="dropdown-item" href="https://georgiechen.github.io/web-read-skill.html">杰园</a>
+                <a class="dropdown-item" href="https://georgiechen.github.io/lilitu/Blueberry cake.html">园医</a>
+                <a class="dropdown-item" href="https://georgiechen.github.io/lilitu/Schwarzwald cake.html">园空</a>
+              </div>
           </ul>
         </div>
       </nav>
