--- a/index.html
+++ b/index.html
@@ -35,8 +35,15 @@ var _hmt = _hmt || [];
         <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample08">
           <ul class="navbar-nav">
             <li class="nav-item"><a class="nav-link" href="https://georgiechen.github.io">首页</a></li>
-             <li class="nav-item"><a class="nav-link" href="https://georgiechen.github.io">园丁</a></li>  
-              <a class="nav-item" href="https://georgiechen.github.io/web-read-kill.html">杰园</a></li>
+            <li class="dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="georgiechen" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">黎黎兔蛋糕坊</a>
+              <div class="dropdown-menu" aria-labelledby="georgiechen">
+                <a class="dropdown-item" href="https://georgiechen.github.io/">园丁</a>
+                <a class="dropdown-item" href="https://georgiechen.github.io/web-read-skill/index.html">杰园</a>
+                <a class="dropdown-item" href="http://baijiahao.baidu.com/s?id=1599870354387474754&wfr=spider&for=pc">园医</a>
+                <a class="dropdown-item" href="http://baijiahao.baidu.com/s?id=1599952120237247639&wfr=spider&for=pc">园佣</a>
+              </div>
+            </li>
             <li class="nav-item"><a class="nav-link" href="https://georgiechen.github.io/about/">关于我</a></li>
             </li>
           </ul>
