--- a/index.html
+++ b/index.html
@@ -36,9 +36,8 @@ var _hmt = _hmt || [];
           <ul class="navbar-nav">
             <li class="nav-item"><a class="nav-link" href="https://georgiechen.github.io">首页</a></li>
             <li class="dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="georgiechen" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">黎黎兔蛋糕坊</a>
+              <a class="nav-link dropdown-toggle" href="#" id="georgiechen" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">园丁</a>
               <div class="dropdown-menu" aria-labelledby="georgiechen">
-                <a class="dropdown-item" href="https://georgiechen.github.io/">园丁</a>
                 <a class="dropdown-item" href="https://georgiechen.github.io/web-read-skill/index.html">杰园</a>
                 <a class="dropdown-item" href="http://baijiahao.baidu.com/s?id=1599870354387474754&wfr=spider&for=pc">园医</a>
                 <a class="dropdown-item" href="http://baijiahao.baidu.com/s?id=1599952120237247639&wfr=spider&for=pc">园佣</a>
@@ -75,7 +74,7 @@ var _hmt = _hmt || [];
           <div class="row">
             <div class="col-sm-12">
               <ul class="list-inline">
-                <li class="list-inline-item"><a href="https://georgiechen.github.io/about/">Copyright © 2011-2018 Zack 保留所有权利</a></li>
+                <li class="list-inline-item"><a href="https://georgiechen.github.io/about/">Copyright © 2018-2020 Georgie 保留所有权利</a></li>
                 <li class="list-inline-item"><a href="https://georgiechen.github.io/sitemap.xml">Sitemap</a></li>
               </ul>
             </div>
