--- a/index.html
+++ b/index.html
@@ -43,6 +43,20 @@ var _hmt = _hmt || [];
                 <a class="dropdown-item" href="http://baijiahao.baidu.com/s?id=1599952120237247639&wfr=spider&for=pc">园佣</a>
               </div>
             </li>
+            <li class="dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="georgiechen" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">医生</a>
+              <div class="dropdown-menu" aria-labelledby="georgiechen">
+                <a class="dropdown-item" href="http://www.51wxjz.com/news/v114494.html">杰医</a>
+                <a class="dropdown-item" href="http://www.ruan8.com/news/4929_2.html">鹿医</a>
+              </div>
+            </li>
+            <li class="dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="georgiechen" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">佣兵</a>
+              <div class="dropdown-menu" aria-labelledby="georgiechen">
+                <a class="dropdown-item" href="http://baijiahao.baidu.com/s?id=1599595041703281980&wfr=spider&for=pc">杰佣</a>
+                <a class="dropdown-item" href="https://tieba.baidu.com/p/5650102038?red_tag=1432165894">大势-杰佣</a>
+              </div>
+            </li>
             <li class="nav-item"><a class="nav-link" href="https://georgiechen.github.io/about/">关于我</a></li>
             </li>
           </ul>
