--- a/web-read-skill/index.html
+++ b/web-read-skill/index.html
@@ -71,7 +71,7 @@ var _hmt = _hmt || [];
           <div class="row">
             <div class="col-sm-12">
               <ul class="list-inline">
-                <li class="list-inline-item"><a href="https://georgiechen.github.io/about/">Copyright © 2011-2018 Zack 保留所有权利</a></li>
+                <li class="list-inline-item"><a href="https://georgiechen.github.io/about/">Copyright © 2018-2020 Georgie 保留所有权利</a></li>
                 <li class="list-inline-item"><a href="https://georgiechen.github.io/sitemap.xml">Sitemap</a></li>
               </ul>
             </div>
