--- a/web-read-skill/index.html
+++ b/web-read-skill/index.html
@@ -115,5 +115,7 @@ var _hmt = _hmt || [];
     <script src="/assets/popper.min.js"></script>
     <script src="/assets/bootstrap.min.js"></script>
     <script src="/assets/back-to-top.min.js"></script>
+    <div id="topcontrol" style="position: fixed; bottom: 5px; right: 5px; opacity: 1; cursor: pointer;" title="Scroll Back to Top">
+      <img src="/images/up.png" style="width:38px; height:38px"></div>
   </body>
 </html>
